# misaem_python

./: .gitignore  README.md  commands.txt  pyproject.toml  readme.md  test.ipynb  test_faster.ipynb
.github/workflows/: python-test.yml
archive/: miss_glm_parallel.py
experiments/: 1_MAR_5d_050corr.py  1_MCAR_5d_050corr.py  1_MCAR_5d_095corr.py  1_MCAR_5d_0corr.py  1_SimMCAR_generate_data.py  2_train_methods.py  4_adjust_results.py  5_param_estimation_scores.py  6B_build_calibration_score.R  distance_probit_logit.py  logistic_with_NAs.Rproj  methods.py  readme.md  requirements.txt  setups_design.py  utils.py
experiments/configs/: config_MCAR.txt  config_MCAR_20d_05corr.txt  config_MCAR_5d_095corr.txt
experiments/tables_and_figures/: Sims_grouped_methods.py  Sims_main_results.py  simulations_failed.py
logistic_with_NAs/: 1_MCAR_20d_05corr copy.py  2_train_methods.py  3_train_methods_in_R.R  4_adjust_results.py  5_param_estimation_scores.py  6A_build_score_matrix.py  6C_score_per_patterns.py  methods.py  methods_in_R.R  readme.md  setups_design.py
logistic_with_NAs/configs/: config_MAR_5d_050corr.txt  config_MCAR_5d_050corr.txt  config_MCAR_5d_0corr.txt
src/: __init__.py  miss_glm.py  miss_glm_fast.py  miss_glm_faster.py  miss_glm_legacy.py  miss_glm_legacy_2.py  miss_glm_loop.py  miss_glm_parallel.py  miss_glm_parallel_fast.py  utils.py
src/misaem/: __init__.py  misaem.py  utils.py
test/: conditional_distri.py  fake_sigma_vs_true_sigma.py  sklearn_pipeline.py  test_miss_glm.py  test_miss_glm_paral.py  test_speed_pred.py  utils.py
tests/: test_miss_glm.py
(+27 files in other folders)
