[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "missing_regression"
version = "0.1.0"
authors = [
  { name="Christophe Muller", email="mullerchristophe21@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/mullerchristophe21/misaem_python"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
where = ["src"]